# noether

./: .gitignore  .secrets.baseline  CLAUDE.md  Cargo.toml  README.md  mkdocs.yml  solv-noether.code-workspace
.cli/: README.md  changelog.md
.cli/examples/: compose.sh  run.sh
.cli/schemas/: error.json  stage-spec.json  success.json
.github/workflows/: ci.yml  docs.yml  quickstart.yml  release.yml
crates/noether-cli/: Cargo.toml
crates/noether-cli/src/: main.rs  output.rs
crates/noether-cli/src/commands/: build.rs  build_browser.rs  build_mobile.rs  compose.rs  mod.rs  run.rs  serve.rs  stage.rs  store.rs  trace.rs
crates/noether-core/: Cargo.toml
crates/noether-core/src/: capability.rs  lib.rs
crates/noether-core/src/effects/: effect.rs  mod.rs
crates/noether-core/src/stage/: builder.rs  hash.rs  mod.rs  schema.rs  signing.rs  spec.rs  validation.rs
crates/noether-core/src/stdlib/: collections.rs  control.rs  data.rs  internal.rs  io.rs  kv.rs  llm.rs  mod.rs  scalar.rs  text.rs  ui.rs  validation.rs
crates/noether-core/src/types/: checker.rs  display.rs  mod.rs  primitive.rs
crates/noether-core/tests/: integration_test.rs  property_tests.rs  stdlib_validation.rs
crates/noether-engine/: Cargo.toml
crates/noether-engine/src/: checker.rs  composition_cache.rs  error.rs  lib.rs  planner.rs  providers.rs  registry_client.rs  stage_test.rs  trace.rs
crates/noether-engine/src/agent/: mod.rs  prompt.rs
crates/noether-engine/src/executor/: budget.rs  composite.rs  inline.rs  mock.rs  mod.rs  nix.rs  pure_cache.rs  runner.rs  runtime.rs
crates/noether-engine/src/executor/stages/: arrow.rs  collections.rs  control.rs  data.rs  io.rs  kv.rs  mod.rs  scalar.rs  text.rs  ui.rs  validation.rs
crates/noether-engine/src/index/: cache.rs  embedding.rs  mod.rs  search.rs  text.rs
crates/noether-engine/src/lagrange/: ast.rs  mod.rs
crates/noether-engine/src/llm/: anthropic.rs  mistral.rs  mod.rs  openai.rs  vertex.rs
crates/noether-engine/tests/: index_integration.rs  integration.rs  nix_e2e.rs  stdlib_verifies.rs
crates/noether-grid-broker/: Cargo.toml  README.md
crates/noether-grid-worker/: Cargo.toml
crates/noether-scheduler/: Cargo.toml
crates/noether-store/: Cargo.toml
crates/noether-store/migrations/: 001_initial.sql
crates/noether-store/src/: async_traits.rs  file.rs  lib.rs  lifecycle.rs  memory.rs  traits.rs
crates/noether-store/tests/: stdlib_store.rs
demo/: index.md  run-demo.sh
demo/real-world/: demo1-csv-analysis.sh  demo2-parallel-analysis.sh  demo3-reuse-pipeline.sh
demo/recordings/: demo1-compose.cast  demo2-typesafety.cast  demo3-parallel.cast  demo4-reuse.cast  demo6-ml.cast  demo7-dashboard.cast  record-demo1-compose.sh  record-demo1.sh  record-demo2-typesafety.sh  record-demo2.sh  record-demo3-parallel.sh  record-demo3.sh  record-demo4-reuse.sh  record-demo6-ml.sh  record-demo7-dashboard.sh
docs/: changelog.md  contributing.md  demo.md  index.md  noether-agent-case-study.md  roadmap.md
docs/architecture/: composition-engine.md  nix-execution.md  overview.md  stage-identity.md  type-system.md
docs/case-studies/: benchmark.md  noether-case-study.html  search-engines.md
docs/cli/: acli.md  commands.md
docs/guides/: llm-compose.md  (+5 more)
examples/: README.md  fleet-briefing.json  multi-source-search.json  travel-intelligence.json  weather-report.json
(+15 files in other folders)
