[package]
name = "noether-engine"
version.workspace = true
edition.workspace = true

[dependencies]
noether-core = { path = "../noether-core" }
noether-store = { path = "../noether-store" }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
rand = { workspace = true }
rusqlite = { version = "0.39.0", features = ["bundled"] }

[dev-dependencies]
proptest = { workspace = true }
tempfile = "3"
