[package]
name = "noether-store"
version.workspace = true
edition.workspace = true

[dependencies]
noether-core = { path = "../noether-core" }
serde        = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
async-trait  = "0.1"

[dev-dependencies]
tempfile = "3"
tokio    = { version = "1", features = ["rt", "macros"] }
